--- a/frases_do_dia/pubspec.yaml
+++ b/frases_do_dia/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - imagens/uber_1.jpg
     - imagens/uber_2.png
+    - imagens/logo-frases-do-dia.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
