--- a/cara_ou_coroa/pubspec.yaml
+++ b/cara_ou_coroa/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
     - imagens/botao_voltar.png
     - imagens/logo.png
     - imagens/moeda_cara.png
-    - imagens/moeda_cara.png
+    - imagens/moeda_coroa.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
