--- a/mapas_e_geolocalizacao_2/android/app/src/main/AndroidManifest.xml
+++ b/mapas_e_geolocalizacao_2/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="mapas_e_geolocalizacao_2"
         android:name="${applicationName}"
