--- a/mapas_e_geolocalizacao_2/pubspec.yaml
+++ b/mapas_e_geolocalizacao_2/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.0.0
   geolocator: ^10.0.1
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
