--- a/minhas_viagens/android/app/src/main/AndroidManifest.xml
+++ b/minhas_viagens/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="minhas_viagens"
         android:name="${applicationName}"
@@ -30,6 +33,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value=""/>
+            android:value="api key here"/>
     </application>
 </manifest>
