--- a/minhas_viagens/pubspec.yaml
+++ b/minhas_viagens/pubspec.yaml
@@ -49,6 +49,8 @@ dev_dependencies:
   google_maps_flutter: ^2.0.0
   geolocator: ^10.0.1
   geocoding: ^2.1.0
+  firebase_core: ^2.15.1 # Recursos Básicos
+  cloud_firestore: ^4.9.0 # Banco de Dados
 
 
 # For information on the generic Dart part of this file, see the
