Configurando o projeto uber no projeto minhas-viagens. Criando interface de login.

--- a/minhas_viagens/pubspec.yaml
+++ b/minhas_viagens/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
   #   - images/a_dot_ham.jpeg logo.png
   assets:
     - imagens/logo.png
+    - imagens/uber/fundo.png
+    - imagens/uber/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
