--- a/minhas_viagens/pubspec.yaml
+++ b/minhas_viagens/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - imagens/logo.png
     - imagens/uber/fundo.png
     - imagens/uber/logo.png
+    - imagens/uber/motorista.png
+    - imagens/uber/passageiro.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
