--- a/minhas_viagens/android/app/src/main/AndroidManifest.xml
+++ b/minhas_viagens/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="api key here"/>
+            android:value="AIzaSyCw8JdxJZCAUaIchHFs_IvWj3i8DCXFee4"/>
     </application>
 </manifest>
