238 - finalizando corrida e calculando valor.

--- a/minhas_viagens/pubspec.yaml
+++ b/minhas_viagens/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   firebase_core: ^2.15.1 # Recursos Básicos
   cloud_firestore: ^4.9.0 # Banco de Dados
   firebase_auth: ^4.8.0 # Autenticação de Usuários
+  intl: ^0.19.0 #Formatação de numeros
 
 
 # For information on the generic Dart part of this file, see the
